<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_fisrt_name"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="226dp" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="481dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="405dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_the_password"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="494dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_last_name"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mail_adress"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="349dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/your_residential_adress"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="547dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="338dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="251dp"
        android:layout_height="65dp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="272dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="240dp"
        android:layout_height="51dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="205dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="419dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="196dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/full_complete_adress"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="181dp"
        tools:layout_editor_absoluteY="540dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/personal_informations"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="153dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/sign_up_as_a_cook"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="54dp" />
</android.support.constraint.ConstraintLayout>