<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="33dp"
        tools:visibility="visible">

        <EditText
            android:id="@+id/editTextTextPassword5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="342dp" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="171dp"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/_16_digits_card_number"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="588dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="131dp">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="204dp">

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="275dp" />

        <EditText
            android:id="@+id/editTextTextPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="418dp" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="251dp"
            android:layout_height="65dp"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="209dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="196dp"
            android:layout_height="56dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/full_complete_adress"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword1"
            tools:layout_editor_absoluteX="184dp" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvv_code"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="654dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="172dp"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/_3_digits_secret_code"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="641dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="600dp" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/your_residential_adress"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="484dp" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_the_password"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="431dp" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_password"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_mail_adress"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="286dp" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_last_name"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="226dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/editText"
        android:layout_width="240dp"
        android:layout_height="51dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_fisrt_name"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="163dp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/personal_informations"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/sign_up_as_a_client"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="44dp" />
</android.support.constraint.ConstraintLayout>