<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginTop="88dp"
        android:drawableTop="@android:drawable/arrow_up_float"
        android:text="@string/ottawa_s_mealer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="60dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="568dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="71dp"
        android:layout_height="30dp"
        android:text="@string/e_mail"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="310dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="374dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_ottawa_s_mealer_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_yet_sign_up_and_get_started_today"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="522dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="223dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="357dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="230dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="289dp" />

</android.support.constraint.ConstraintLayout>