<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/complementary_informations"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="226dp" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:fontFamily="monospace"
        android:text="@string/sign_up_as_a_cook"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="462dp" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooker_s_description"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="472dp" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_a_picutre_of_your_void_cheque"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="336dp" />
</android.support.constraint.ConstraintLayout>