<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="558dp" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginTop="96dp"
        android:drawableTop="@android:drawable/arrow_up_float"
        android:text="@string/ottawa_s_mealer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="59dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="373dp"
        android:layout_height="132dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_you_re_signed_in_as_a_cook"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="314dp" />
</android.support.constraint.ConstraintLayout>